--- a/res/xml/ion_settings_animations.xml
+++ b/res/xml/ion_settings_animations.xml
@@ -19,7 +19,8 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceCategory
-        android:title="@string/system_animation_title">
+        android:title="@string/system_animation_title"
+        settings:initialExpandedChildrenCount="4" >
 
         <com.ion.ionizer.preferences.CustomSeekBarPreference
             android:key="animation_controls_duration"
@@ -74,4 +75,13 @@
             android:key="wallpaper_intra_close"
             android:title="@string/wallpaper_intra_close_title" />
     </PreferenceCategory>
+
+    <ListPreference
+        android:key="screen_off_animation"
+        android:title="@string/screen_off_animation_title"
+        android:entries="@array/screen_off_animation_entries"
+        android:entryValues="@array/screen_off_animation_values"
+        settings:allowDividerAbove="true"
+        android:persistent="false"
+        android:defaultValue="0" />
 </PreferenceScreen>
