--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -108,6 +108,23 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:title="@string/pocket_lock_title">
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="pocket_judge"
+            android:title="@string/pocket_judge_title"
+            android:summary="@string/pocket_judge_summary"
+            android:defaultValue="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="pocket_judge_allow_fp"
+            android:title="@string/pocket_judge_fp_title"
+            android:summary="@string/pocket_judge_fp_summary"
+            android:defaultValue="false"
+            android:dependency="pocket_judge" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/lockscreen_unl">
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
