--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -443,6 +443,10 @@
     <string name="clock_date_position">Date position</string>
     <string name="show_qs_clock_title">Clock</string>
     <string name="show_qs_clock_summary">Show Clock in QS</string>
+    <string name="status_bar_clock_auto_hide_title">Auto-hide clock</string>
+    <string name="status_bar_clock_auto_hide_summary">Hide and show clock at regular intervals of time</string>
+    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
+    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
 
     <!-- Statusbar Clock Font Style & Size -->
     <string name="status_bar_clock_font_style_title">Clock font style</string>
