Statusbar Clock color [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -468,6 +468,7 @@
     <!-- Statusbar Clock Font Style & Size -->
     <string name="status_bar_clock_font_style_title">Clock font style</string>
     <string name="status_bar_clock_font_size_title">Clock font size</string>
+    <string name="status_bar_clock_color_title">Clock font color</string>
 
     <!-- Lock Clock Fonts -->
     <string name="lock_clock_font_title">Clock font style</string>
