--- a/res/xml/clock_settings.xml
+++ b/res/xml/clock_settings.xml
@@ -48,8 +48,7 @@
         android:key="statusbar_clock_style"
         android:title="@string/status_bar_clock_style_title"
         android:dialogTitle="@string/status_bar_clock_style_title"
-        android:entries="@array/status_bar_clock_style_entries"
-        android:entryValues="@array/status_bar_clock_style_values" />
+        android:defaultValue="0" />
 
        <ListPreference
          android:key="status_bar_am_pm"
