--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -90,6 +90,12 @@
             android:title="@string/show_lte_fourgee_title"
             android:summary="@string/show_lte_fourgee_summary"
             android:defaultValue="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="use_old_mobiletype"
+            android:title="@string/use_old_mobiletype_title"
+            android:summary="@string/use_old_mobiletype_summary"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory 
