--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -100,6 +100,14 @@
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
             android:defaultValue="false" />
+
+         <com.ion.ionizer.preferences.SystemSettingListPreference
+             android:key="volte_icon_style"
+             android:title="@string/volte_icon_style_title"
+             android:entries="@array/volte_icon_type_entries"
+             android:entryValues="@array/volte_icon_type_values"
+             android:summary="%s"
+             android:defaultValue="0"/>
     </PreferenceCategory>
 
     <PreferenceCategory 
