--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -506,6 +506,7 @@
 
     <string-array name="status_bar_battery_style_entries" translatable="false">
         <item>@string/status_bar_battery_style_q</item>
+        <item>@string/status_bar_battery_style_circle_normal</item>
         <item>@string/status_bar_battery_style_dotted_circle</item>
         <item>@string/status_bar_battery_style_circle</item>
         <item>@string/status_bar_battery_style_text</item>
@@ -514,6 +515,7 @@
 
     <string-array name="status_bar_battery_style_values" translatable="false">
         <item>0</item>
+        <item>5</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
