--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -85,6 +85,24 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="notification_screen"
+        android:title="@string/notification_screen_title" >
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="pulse_ambient_light"
+            android:title="@string/pulse_ambient_light_title"
+            android:summary="@string/pulse_ambient_light_summary"
+            android:defaultValue="false" />
+
+        <com.ion.ionizer.colorpicker.ColorPickerPreference
+            android:key="pulse_ambient_light_color"
+            android:title="@string/pulse_ambient_light_color_title"
+            android:persistent="false"
+            android:dependency="pulse_ambient_light"
+            settings:defaultColorValue="0xFF3980FF" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/doze_brightness_category">
 
         <com.ion.ionizer.preferences.CustomSeekBarPreference
