--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -595,14 +595,20 @@
 
     <!-- Tiles animation duration -->
     <string-array name="qs_tile_animation_duration_entries" translatable="false">
+        <item>@string/qs_tile_animation_duration_lowest</item>
         <item>@string/qs_tile_animation_duration_low</item>
         <item>@string/qs_tile_animation_duration_default</item>
         <item>@string/qs_tile_animation_duration_fast</item>
+        <item>@string/qs_tile_animation_duration_fastest</item>
+        <item>@string/qs_tile_animation_duration_fastestx</item>
     </string-array>
     <string-array name="qs_tile_animation_duration_values" translatable="false">
+        <item>3000</item>
         <item>2500</item>
         <item>2000</item>
         <item>1500</item>
+        <item>1000</item>
+        <item>500</item>
     </string-array>
 
     <!-- Tiles animation interpolator -->
