--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -63,6 +63,17 @@
         <item>0</item>
     </string-array>
 
+    <!-- Network Traffic Layout -->
+    <string-array name="network_traffic_layout_entries" translatable="false">
+        <item>@string/network_traffic_layout_h</item>
+        <item>@string/network_traffic_layout_v</item>
+    </string-array>
+
+    <string-array name="network_traffic_layout_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- Network traffic location -->
     <string-array name="network_traffic_location_entries">
         <item>@string/traffic_disabled</item>
