--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -160,6 +160,9 @@
     <string name="network_traffic_hidearrow">Activity arrows</string>
     <string name="network_traffic_hidearrow_summary">Show the network traffic indicator arrows</string>
     <string name="network_traffic_type">Activity type</string>
+    <string name="network_traffic_layout">Activity layout</string>
+    <string name="network_traffic_layout_h">Horizontal</string>
+    <string name="network_traffic_layout_v">Verticle</string>
     <string name="show_network_traffic_combined">Combined (Upload + Download)</string>
     <string name="show_network_traffic_dynamic">Dynamic</string>
     <string name="show_network_traffic_up">Upload</string>
