--- a/res/xml/networktraffic.xml
+++ b/res/xml/networktraffic.xml
@@ -34,13 +34,20 @@
         android:entryValues="@array/show_network_traffic_type_values"
         android:persistent="false" />
 
+    <ListPreference
+        android:key="network_traffic_layout"
+        android:title="@string/network_traffic_layout"
+        android:entries="@array/network_traffic_layout_entries"
+        android:entryValues="@array/network_traffic_layout_values"
+        android:persistent="false" />
+
     <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
         android:max="10"
         android:min="0"
         android:defaultValue="1"
-        ionionizer:units="KB/s" />
+        ionionizer:units="KiB/s" />
 
     <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
         android:key="network_traffic_refresh_interval"
