--- a/res/xml/visualizer_settings.xml
+++ b/res/xml/visualizer_settings.xml
@@ -22,7 +22,14 @@
         android:key="lockscreen_visualizer_autocolor"
         android:title="@string/lockscreen_autocolor_title"
         android:summary="@string/lockscreen_autocolor_summary"
-        android:defaultValue="true" />
+        android:defaultValue="true"
+        android:disableDependentsState="true" />
+
+    <com.ion.ionizer.colorpicker.ColorPickerPreference
+        android:key="lockscreen_visualizer_color"
+        android:title="@string/lockscreen_visualizer_color_title"
+        settings:defaultColorValue="0xffffffff"
+        android:dependency="lockscreen_visualizer_autocolor" />
 
     <com.ion.ionizer.preferences.SecureSettingSwitchPreference
         android:key="lockscreen_lavalamp_enabled"
