continously update chnages for some seekbars
I wanna see change in live action )

Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/xml/clock_settings.xml
+++ b/res/xml/clock_settings.xml
@@ -68,7 +68,8 @@
          android:max="23"
          settings:min="4"
          android:defaultValue="14"
-         settings:units="dp" />
+         settings:units="dp"
+         settings:continuousUpdates="true" />
 
      <com.ion.ionizer.preferences.SystemSettingListPreference
          android:key="status_bar_clock_font_style"
