--- a/res/xml/carrier_label.xml
+++ b/res/xml/carrier_label.xml
@@ -37,7 +37,8 @@
         android:max="23"
         settings:min="8"
         android:defaultValue="14"
-        settings:units="dp" />
+        settings:units="dp"
+        settings:continuousUpdates="true" />
 
     <com.ion.ionizer.preferences.SystemSettingListPreference
         android:key="status_bar_carrier_font_style"
