--- a/res/values/ion_styles.xml
+++ b/res/values/ion_styles.xml
@@ -18,4 +18,21 @@
         <item name="android:layout_marginStart">-4dp</item>
         <item name="android:minWidth">60dp</item>
     </style>
+
+    <!-- ion divider -->
+    <style name="Widget" />
+
+    <style name="Widget.Divider">
+        <item name="android:background">@color/colorCardStrokeInverse</item>
+    </style>
+
+    <style name="Widget.Divider.Horizontal">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">1dp</item>
+    </style>
+
+    <style name="Widget.Divider.Vertical">
+        <item name="android:layout_width">1dp</item>
+        <item name="android:layout_height">0dp</item>
+    </style>
 </resources>
