--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -92,6 +92,10 @@
             android:summary="@string/show_qs_on_secure_keyguard_summary"
             android:defaultValue="true"/>
 
+        <PreferenceScreen
+            android:layout="@layout/ion_divider"
+            android:selectable="false" />
+
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_charging_animation"
             android:title="@string/lockscreen_charging_animation_title"
@@ -104,9 +108,12 @@
             android:summary="@string/lockscreen_battery_info_summary"
             android:defaultValue="true" />
 
+        <PreferenceScreen
+            android:layout="@layout/ion_divider"
+            android:selectable="false" />
+
         <Preference
-            android:title="@string/lockscreen_tuner_title"
-            settings:allowDividerAbove="true">
+            android:title="@string/lockscreen_tuner_title">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
