--- a/res/xml/clock_settings.xml
+++ b/res/xml/clock_settings.xml
@@ -18,32 +18,6 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_clock_title">
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="status_bar_clock_auto_hide"
-        android:title="@string/status_bar_clock_auto_hide_title"
-        android:summary="@string/status_bar_clock_auto_hide_summary"
-        android:defaultValue="false" />
-
-    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-        android:key="status_bar_clock_auto_hide_hduration"
-        android:title="@string/status_bar_clock_auto_hide_hdur_title"
-        android:max="300"
-        settings:min="5"
-        settings:interval="5"
-        settings:units="sec"
-        android:dependency="status_bar_clock_auto_hide"
-        android:defaultValue="60" />
-
-    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-        android:key="status_bar_clock_auto_hide_sduration"
-        android:title="@string/status_bar_clock_auto_hide_sdur_title"
-        android:max="300"
-        settings:min="5"
-        settings:interval="5"
-        settings:units="sec"
-        android:dependency="status_bar_clock_auto_hide"
-        android:defaultValue="5" />
-
     <ListPreference
         android:key="statusbar_clock_style"
         android:title="@string/status_bar_clock_style_title"
@@ -79,6 +53,10 @@
          android:entryValues="@array/additional_fonts_values"
          android:defaultValue="14" />
 
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
+
      <ListPreference
          android:key="clock_date_display"
          android:title="@string/clock_date_display"
@@ -103,4 +81,34 @@
          android:title="@string/clock_date_position"
          android:entries="@array/clock_date_position_entries"
          android:entryValues="@array/clock_date_position_values" />
+
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="status_bar_clock_auto_hide"
+        android:title="@string/status_bar_clock_auto_hide_title"
+        android:summary="@string/status_bar_clock_auto_hide_summary"
+        android:defaultValue="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="status_bar_clock_auto_hide_hduration"
+        android:title="@string/status_bar_clock_auto_hide_hdur_title"
+        android:max="300"
+        settings:min="5"
+        settings:interval="5"
+        settings:units="sec"
+        android:dependency="status_bar_clock_auto_hide"
+        android:defaultValue="60" />
+
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="status_bar_clock_auto_hide_sduration"
+        android:title="@string/status_bar_clock_auto_hide_sdur_title"
+        android:max="300"
+        settings:min="5"
+        settings:interval="5"
+        settings:units="sec"
+        android:dependency="status_bar_clock_auto_hide"
+        android:defaultValue="5" />
 </PreferenceScreen>
