--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -19,11 +19,16 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     settings:initialExpandedChildrenCount="4" >
 
-    <Preference
-        android:key="about_category"
-        android:title="@string/about_title"
-        android:summary="@string/ion_title"
-        android:fragment="com.ion.ionizer.fragments.About"/>
+    <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
+        android:key="gaming_mode_enabled"
+        android:fragment="com.ion.ionizer.fragments.GamingMode"
+        android:title="@string/gaming_mode_title"
+        android:summary="@string/gaming_mode_summary"
+        android:defaultValue="false" />
+
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
 
     <!-- Animations -->
     <Preference
@@ -39,24 +44,21 @@
          android:summary="@string/corners_summary"
          android:fragment="com.ion.ionizer.fragments.RoundedCornersSettings" />
 
-    <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
-        android:key="gaming_mode_enabled"
-        android:fragment="com.ion.ionizer.fragments.GamingMode"
-        android:title="@string/gaming_mode_title"
-        android:summary="@string/gaming_mode_summary"
-        android:defaultValue="false" />
+    <!-- IME Settings -->
+    <Preference
+        android:key="ime_category"
+        android:title="@string/ime_title"
+        android:summary="@string/ime_title_summary"
+        android:fragment="com.ion.ionizer.fragments.IME"/>
+
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
 
     <SwitchPreference
         android:key="show_cpu_info"
         android:title="@string/show_cpu_title"
         android:summary="@string/show_cpu_summary"/>
-
-    <com.ion.ionizer.preferences.SystemSettingListPreference
-        android:key="screenshot_type"
-        android:entries="@array/screenshot_type_entries"
-        android:entryValues="@array/screenshot_type_values"
-        android:title="@string/screenshot_type_title"
-        android:defaultValue="0" />
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
         android:key="force_expanded_settings"
@@ -69,6 +71,13 @@
         android:title="@string/allow_signature_fake"
         android:summary="@string/allow_signature_fake_summary"
         android:defaultValue="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingListPreference
+        android:key="screenshot_type"
+        android:entries="@array/screenshot_type_entries"
+        android:entryValues="@array/screenshot_type_values"
+        android:title="@string/screenshot_type_title"
+        android:defaultValue="0" />
 
     <PreferenceCategory
         android:title="@string/misc_title" >
