--- a/res/xml/power_menu.xml
+++ b/res/xml/power_menu.xml
@@ -37,6 +37,10 @@
        android:summary="@string/lockdown_settings_summary"
        android:defaultValue="false" />
 
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
+
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
         android:key="powermenu_screenshot"
         android:title="@string/powermenu_screenshot_title"
@@ -60,6 +64,10 @@
         android:title="@string/powermenu_airplane_title"
         android:summary="@string/powermenu_airplane_summary"
         android:defaultValue="false" />
+
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
         android:key="powermenu_emergency"
@@ -90,6 +98,10 @@
             android:summary="@string/powermenu_ls_advanced_reboot_summary"
             android:dependency="powermenu_advanced_reboot"
             android:defaultValue="false" />
+
+        <PreferenceScreen
+            android:layout="@layout/ion_divider"
+            android:selectable="false" />
 
         <SwitchPreference
             android:key="powermenu_ls_screenshot"
