--- a/res/xml/ion_settings_navigation.xml
+++ b/res/xml/ion_settings_navigation.xml
@@ -25,6 +25,15 @@
         android:defaultValue="true"
         android:persistent="false" />
 
+    <ListPreference
+        android:key="nav_bar_layout"
+        android:title="@string/nav_bar_layout"
+        android:summary="%s"
+        android:defaultValue="default"
+        android:persistent="false"
+        android:entries="@array/nav_bar_layouts"
+        android:entryValues="@array/nav_bar_layouts_values" />
+
     <com.ion.ionizer.preferences.SecureSettingSwitchPreference
         android:key="sysui_nav_bar_inverse"
         android:title="@string/navbar_invert_layout_title"
