--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -774,6 +774,7 @@
         <item>@string/volte_icon_volte</item>
         <item>@string/volte_icon_oos</item>
         <item>@string/volte_icon_vo</item>
+        <item>@string/volte_icon_volit</item>
     </string-array>
 
     <string-array name="volte_icon_type_values" translatable="false">
@@ -782,5 +783,6 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 </resources>
