Add ASUS VoLTE icon [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -775,6 +775,7 @@
         <item>@string/volte_icon_oos</item>
         <item>@string/volte_icon_vo</item>
         <item>@string/volte_icon_volit</item>
+        <item>@string/volte_icon_asus</item>
     </string-array>
 
     <string-array name="volte_icon_type_values" translatable="false">
@@ -784,5 +785,6 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+        <item>6</item>
     </string-array>
 </resources>
