--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -917,4 +917,5 @@
     <string name="volte_icon_oos">VoLTE OOS Icon</string>
     <string name="volte_icon_hd">HD Icon</string>
     <string name="volte_icon_volit">VoLIT Icon</string>
+    <string name="volte_icon_asus">VoLTE Asus Icon</string>
 </resources>
