FOD icon picker [2/2]
* Add a footer to explain how users can add their own icons

Signed-off-by: Stallix <thestallix@gmail.com>
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_dimens.xml
+++ b/res/values/ion_dimens.xml
@@ -23,4 +23,9 @@
     <dimen name="alert_dialog_padding_material">20dp</dimen>
     <dimen name="floating_widget_view_padding">10dp</dimen>
     <dimen name="floating_widget_window_padding">10dp</dimen>
+
+    <!-- FOD icon picker -->
+    <dimen name="fod_picker_item_margin">20dp</dimen>
+    <dimen name="fod_picker_item_size">100dp</dimen>
+    <dimen name="fod_picker_item_padding">20dp</dimen>
 </resources>
