--- a/res/drawable/ic_fod_item.xml
+++ b/res/drawable/ic_fod_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 ion-OS
+<!--
+     Copyright (C) 2019 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,13 +14,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-    <!-- ColorPicker -->
-    <color name="disabled_text_color">#66000000</color>
-
-    <!-- ion divider -->
-    <color name="colorCardStrokeInverse">#2A000000</color>
-
-    <!-- FOD icon picker -->
-    <color name="fod_item_background_stroke_color">#d6d6d6</color>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+   <solid android:color="@android:color/transparent"/>
+   <corners android:radius="8dp"/>
+   <stroke android:width="2dp" android:color="?android:attr/textColorSecondary"/>
+</shape>
