--- a/res/values-night/ion_colors.xml
+++ b/res/values-night/ion_colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 ion-OS
+<!-- Copyright (C) 2020 ion-OS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,12 +14,7 @@
      limitations under the License.
 -->
 <resources>
-    <!-- ColorPicker -->
-    <color name="disabled_text_color">#66000000</color>
-
-    <!-- ion divider -->
-    <color name="colorCardStrokeInverse">#2A000000</color>
 
     <!-- FOD icon picker -->
-    <color name="fod_item_background_stroke_color">#d6d6d6</color>
+    <color name="fod_item_background_stroke_color">#555555</color>
 </resources>
