--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -18,11 +18,13 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/gaming_mode_title">
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+    <com.ion.ionizer.preferences.SystemSettingListPreference
         android:key="gaming_mode_headsup_toggle"
         android:title="@string/gaming_mode_headsup_title"
-        android:summary="@string/gaming_mode_headsup_summary"
-        android:defaultValue="true" />
+        android:entries="@array/gaming_mode_headsup_toggle_entries"
+        android:entryValues="@array/gaming_mode_headsup_toggle_values"
+        android:summary="%s"
+        android:defaultValue="1" />
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_hw_keys_toggle"
