--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -820,6 +820,8 @@
     <string name="gaming_mode_notifications_all_title">Show toasts and notification</string>
     <string name="gaming_mode_dynamic_title">Dynamic mode</string>
     <string name="gaming_mode_dynamic_summary">Try detecting and adding gaming apps automatically</string>
+    <string name="gaming_mode_notifications_feedback_title">Disable notifications feedback</string>
+    <string name="gaming_mode_notifications_feedback_summary">Block notifications sound &amp; vibration when Gaming mode is turned on</string>
 
     <!-- Battery light -->
     <string name="light_settings_header">Notif. LED Settings</string>
