Disable Notifications vibration [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -860,4 +860,8 @@
     <string name="pulse_ambient_light_duration">Edge light pulse duration</string>
     <string name="edgelight_left">Left Edge</string>
     <string name="edgelight_right">Right Edge</string>
+
+    <!-- Notification Vibration -->
+    <string name="vibrate_on_notifications_title">Notification vibration</string>
+    <string name="vibrate_on_notifications_summary">Vibrate on notifications</string>
 </resources>
